Make the faker connector generate multiple splits per node